parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> segment_list
Rule 2     segment_list -> segment_list segment
Rule 3     segment_list -> segment
Rule 4     segment -> PHP_OPEN statement_list PHP_CLOSE
Rule 5     segment -> PHP_OPEN statement_list
Rule 6     segment -> statement_list PHP_CLOSE
Rule 7     segment -> statement_list
Rule 8     statement_list -> statement_list statement
Rule 9     statement_list -> statement
Rule 10    statement -> expression SEMICOLON
Rule 11    statement -> if_statement
Rule 12    statement -> for_statement
Rule 13    statement -> while_statement
Rule 14    statement -> function_declaration
Rule 15    statement -> echo_statement
Rule 16    statement -> print_statement
Rule 17    statement -> block
Rule 18    statement -> RETURN expression SEMICOLON
Rule 19    block -> LBLOCK statement_list RBLOCK
Rule 20    if_statement -> IF LPAREN expression RPAREN statement
Rule 21    if_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 22    for_statement -> FOR LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN statement
Rule 23    while_statement -> WHILE LPAREN expression RPAREN statement
Rule 24    echo_statement -> ECHO expression SEMICOLON
Rule 25    print_statement -> PRINT expression SEMICOLON
Rule 26    function_declaration -> FUNCTION ID LPAREN parameter_list RPAREN block
Rule 27    parameter_list -> parameter_list COMMA VARIABLE
Rule 28    parameter_list -> VARIABLE
Rule 29    parameter_list -> empty
Rule 30    expression -> ID LPAREN argument_list RPAREN
Rule 31    expression -> VARIABLE LPAREN argument_list RPAREN
Rule 32    argument_list -> argument_list COMMA expression
Rule 33    argument_list -> expression
Rule 34    argument_list -> empty
Rule 35    expression -> expression PLUS expression
Rule 36    expression -> expression MINUS expression
Rule 37    expression -> expression TIMES expression
Rule 38    expression -> expression DIVIDE expression
Rule 39    expression -> expression MODULE expression
Rule 40    expression -> expression DOT expression
Rule 41    expression -> expression ISEQUAL expression
Rule 42    expression -> expression NOTISEQUAL expression
Rule 43    expression -> expression GREATERTHAN expression
Rule 44    expression -> expression LESSTHAN expression
Rule 45    expression -> expression GREATERTHANEQUAL expression
Rule 46    expression -> expression LESSEQUAL expression
Rule 47    expression -> expression AND expression
Rule 48    expression -> expression OR expression
Rule 49    expression -> MINUS expression
Rule 50    expression -> VARIABLE INCREMENT
Rule 51    expression -> VARIABLE DECREMENT
Rule 52    expression -> INCREMENT VARIABLE
Rule 53    expression -> DECREMENT VARIABLE
Rule 54    expression -> LPAREN expression RPAREN
Rule 55    expression -> NUMBER
Rule 56    expression -> VARIABLE
Rule 57    expression -> STRING
Rule 58    expression -> BOOLEAN
Rule 59    expression -> VARIABLE EQUAL expression
Rule 60    empty -> <empty>

Terminals, with rules where they appear

AND                  : 47
BOOLEAN              : 58
COMMA                : 27 32
DECREMENT            : 51 53
DIVIDE               : 38
DOT                  : 40
ECHO                 : 24
ELSE                 : 21
EQUAL                : 59
FOR                  : 22
FUNCTION             : 26
GREATERTHAN          : 43
GREATERTHANEQUAL     : 45
ID                   : 26 30
IF                   : 20 21
INCREMENT            : 50 52
ISEQUAL              : 41
LBLOCK               : 19
LESSEQUAL            : 46
LESSTHAN             : 44
LPAREN               : 20 21 22 23 26 30 31 54
MINUS                : 36 49
MODULE               : 39
NOTISEQUAL           : 42
NUMBER               : 55
OR                   : 48
PHP_CLOSE            : 4 6
PHP_OPEN             : 4 5
PLUS                 : 35
PRINT                : 25
RBLOCK               : 19
RETURN               : 18
RPAREN               : 20 21 22 23 26 30 31 54
SEMICOLON            : 10 18 22 22 24 25
STRING               : 57
TIMES                : 37
VARIABLE             : 27 28 31 50 51 52 53 56 59
WHILE                : 23
error                : 

Nonterminals, with rules where they appear

argument_list        : 30 31 32
block                : 17 26
echo_statement       : 15
empty                : 29 34
expression           : 10 18 20 21 22 22 22 23 24 25 32 33 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 54 59
for_statement        : 12
function_declaration : 14
if_statement         : 11
parameter_list       : 26 27
print_statement      : 16
program              : 0
segment              : 2 3
segment_list         : 1 2
statement            : 8 9 20 21 21 22 23
statement_list       : 4 5 6 7 8 19
while_statement      : 13

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . segment_list
    (2) segment_list -> . segment_list segment
    (3) segment_list -> . segment
    (4) segment -> . PHP_OPEN statement_list PHP_CLOSE
    (5) segment -> . PHP_OPEN statement_list
    (6) segment -> . statement_list PHP_CLOSE
    (7) segment -> . statement_list
    (8) statement_list -> . statement_list statement
    (9) statement_list -> . statement
    (10) statement -> . expression SEMICOLON
    (11) statement -> . if_statement
    (12) statement -> . for_statement
    (13) statement -> . while_statement
    (14) statement -> . function_declaration
    (15) statement -> . echo_statement
    (16) statement -> . print_statement
    (17) statement -> . block
    (18) statement -> . RETURN expression SEMICOLON
    (30) expression -> . ID LPAREN argument_list RPAREN
    (31) expression -> . VARIABLE LPAREN argument_list RPAREN
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression MODULE expression
    (40) expression -> . expression DOT expression
    (41) expression -> . expression ISEQUAL expression
    (42) expression -> . expression NOTISEQUAL expression
    (43) expression -> . expression GREATERTHAN expression
    (44) expression -> . expression LESSTHAN expression
    (45) expression -> . expression GREATERTHANEQUAL expression
    (46) expression -> . expression LESSEQUAL expression
    (47) expression -> . expression AND expression
    (48) expression -> . expression OR expression
    (49) expression -> . MINUS expression
    (50) expression -> . VARIABLE INCREMENT
    (51) expression -> . VARIABLE DECREMENT
    (52) expression -> . INCREMENT VARIABLE
    (53) expression -> . DECREMENT VARIABLE
    (54) expression -> . LPAREN expression RPAREN
    (55) expression -> . NUMBER
    (56) expression -> . VARIABLE
    (57) expression -> . STRING
    (58) expression -> . BOOLEAN
    (59) expression -> . VARIABLE EQUAL expression
    (20) if_statement -> . IF LPAREN expression RPAREN statement
    (21) if_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (22) for_statement -> . FOR LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN statement
    (23) while_statement -> . WHILE LPAREN expression RPAREN statement
    (26) function_declaration -> . FUNCTION ID LPAREN parameter_list RPAREN block
    (24) echo_statement -> . ECHO expression SEMICOLON
    (25) print_statement -> . PRINT expression SEMICOLON
    (19) block -> . LBLOCK statement_list RBLOCK

    PHP_OPEN        shift and go to state 4
    RETURN          shift and go to state 15
    ID              shift and go to state 16
    VARIABLE        shift and go to state 18
    MINUS           shift and go to state 19
    INCREMENT       shift and go to state 20
    DECREMENT       shift and go to state 21
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 22
    STRING          shift and go to state 23
    BOOLEAN         shift and go to state 24
    IF              shift and go to state 25
    FOR             shift and go to state 26
    WHILE           shift and go to state 27
    FUNCTION        shift and go to state 28
    ECHO            shift and go to state 29
    PRINT           shift and go to state 30
    LBLOCK          shift and go to state 31

    program                        shift and go to state 1
    segment_list                   shift and go to state 2
    segment                        shift and go to state 3
    statement_list                 shift and go to state 5
    statement                      shift and go to state 6
    expression                     shift and go to state 7
    if_statement                   shift and go to state 8
    for_statement                  shift and go to state 9
    while_statement                shift and go to state 10
    function_declaration           shift and go to state 11
    echo_statement                 shift and go to state 12
    print_statement                shift and go to state 13
    block                          shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (1) program -> segment_list .
    (2) segment_list -> segment_list . segment
    (4) segment -> . PHP_OPEN statement_list PHP_CLOSE
    (5) segment -> . PHP_OPEN statement_list
    (6) segment -> . statement_list PHP_CLOSE
    (7) segment -> . statement_list
    (8) statement_list -> . statement_list statement
    (9) statement_list -> . statement
    (10) statement -> . expression SEMICOLON
    (11) statement -> . if_statement
    (12) statement -> . for_statement
    (13) statement -> . while_statement
    (14) statement -> . function_declaration
    (15) statement -> . echo_statement
    (16) statement -> . print_statement
    (17) statement -> . block
    (18) statement -> . RETURN expression SEMICOLON
    (30) expression -> . ID LPAREN argument_list RPAREN
    (31) expression -> . VARIABLE LPAREN argument_list RPAREN
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression MODULE expression
    (40) expression -> . expression DOT expression
    (41) expression -> . expression ISEQUAL expression
    (42) expression -> . expression NOTISEQUAL expression
    (43) expression -> . expression GREATERTHAN expression
    (44) expression -> . expression LESSTHAN expression
    (45) expression -> . expression GREATERTHANEQUAL expression
    (46) expression -> . expression LESSEQUAL expression
    (47) expression -> . expression AND expression
    (48) expression -> . expression OR expression
    (49) expression -> . MINUS expression
    (50) expression -> . VARIABLE INCREMENT
    (51) expression -> . VARIABLE DECREMENT
    (52) expression -> . INCREMENT VARIABLE
    (53) expression -> . DECREMENT VARIABLE
    (54) expression -> . LPAREN expression RPAREN
    (55) expression -> . NUMBER
    (56) expression -> . VARIABLE
    (57) expression -> . STRING
    (58) expression -> . BOOLEAN
    (59) expression -> . VARIABLE EQUAL expression
    (20) if_statement -> . IF LPAREN expression RPAREN statement
    (21) if_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (22) for_statement -> . FOR LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN statement
    (23) while_statement -> . WHILE LPAREN expression RPAREN statement
    (26) function_declaration -> . FUNCTION ID LPAREN parameter_list RPAREN block
    (24) echo_statement -> . ECHO expression SEMICOLON
    (25) print_statement -> . PRINT expression SEMICOLON
    (19) block -> . LBLOCK statement_list RBLOCK

    $end            reduce using rule 1 (program -> segment_list .)
    PHP_OPEN        shift and go to state 4
    RETURN          shift and go to state 15
    ID              shift and go to state 16
    VARIABLE        shift and go to state 18
    MINUS           shift and go to state 19
    INCREMENT       shift and go to state 20
    DECREMENT       shift and go to state 21
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 22
    STRING          shift and go to state 23
    BOOLEAN         shift and go to state 24
    IF              shift and go to state 25
    FOR             shift and go to state 26
    WHILE           shift and go to state 27
    FUNCTION        shift and go to state 28
    ECHO            shift and go to state 29
    PRINT           shift and go to state 30
    LBLOCK          shift and go to state 31

    segment                        shift and go to state 32
    statement_list                 shift and go to state 5
    statement                      shift and go to state 6
    expression                     shift and go to state 7
    if_statement                   shift and go to state 8
    for_statement                  shift and go to state 9
    while_statement                shift and go to state 10
    function_declaration           shift and go to state 11
    echo_statement                 shift and go to state 12
    print_statement                shift and go to state 13
    block                          shift and go to state 14

state 3

    (3) segment_list -> segment .

    PHP_OPEN        reduce using rule 3 (segment_list -> segment .)
    RETURN          reduce using rule 3 (segment_list -> segment .)
    ID              reduce using rule 3 (segment_list -> segment .)
    VARIABLE        reduce using rule 3 (segment_list -> segment .)
    MINUS           reduce using rule 3 (segment_list -> segment .)
    INCREMENT       reduce using rule 3 (segment_list -> segment .)
    DECREMENT       reduce using rule 3 (segment_list -> segment .)
    LPAREN          reduce using rule 3 (segment_list -> segment .)
    NUMBER          reduce using rule 3 (segment_list -> segment .)
    STRING          reduce using rule 3 (segment_list -> segment .)
    BOOLEAN         reduce using rule 3 (segment_list -> segment .)
    IF              reduce using rule 3 (segment_list -> segment .)
    FOR             reduce using rule 3 (segment_list -> segment .)
    WHILE           reduce using rule 3 (segment_list -> segment .)
    FUNCTION        reduce using rule 3 (segment_list -> segment .)
    ECHO            reduce using rule 3 (segment_list -> segment .)
    PRINT           reduce using rule 3 (segment_list -> segment .)
    LBLOCK          reduce using rule 3 (segment_list -> segment .)
    $end            reduce using rule 3 (segment_list -> segment .)


state 4

    (4) segment -> PHP_OPEN . statement_list PHP_CLOSE
    (5) segment -> PHP_OPEN . statement_list
    (8) statement_list -> . statement_list statement
    (9) statement_list -> . statement
    (10) statement -> . expression SEMICOLON
    (11) statement -> . if_statement
    (12) statement -> . for_statement
    (13) statement -> . while_statement
    (14) statement -> . function_declaration
    (15) statement -> . echo_statement
    (16) statement -> . print_statement
    (17) statement -> . block
    (18) statement -> . RETURN expression SEMICOLON
    (30) expression -> . ID LPAREN argument_list RPAREN
    (31) expression -> . VARIABLE LPAREN argument_list RPAREN
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression MODULE expression
    (40) expression -> . expression DOT expression
    (41) expression -> . expression ISEQUAL expression
    (42) expression -> . expression NOTISEQUAL expression
    (43) expression -> . expression GREATERTHAN expression
    (44) expression -> . expression LESSTHAN expression
    (45) expression -> . expression GREATERTHANEQUAL expression
    (46) expression -> . expression LESSEQUAL expression
    (47) expression -> . expression AND expression
    (48) expression -> . expression OR expression
    (49) expression -> . MINUS expression
    (50) expression -> . VARIABLE INCREMENT
    (51) expression -> . VARIABLE DECREMENT
    (52) expression -> . INCREMENT VARIABLE
    (53) expression -> . DECREMENT VARIABLE
    (54) expression -> . LPAREN expression RPAREN
    (55) expression -> . NUMBER
    (56) expression -> . VARIABLE
    (57) expression -> . STRING
    (58) expression -> . BOOLEAN
    (59) expression -> . VARIABLE EQUAL expression
    (20) if_statement -> . IF LPAREN expression RPAREN statement
    (21) if_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (22) for_statement -> . FOR LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN statement
    (23) while_statement -> . WHILE LPAREN expression RPAREN statement
    (26) function_declaration -> . FUNCTION ID LPAREN parameter_list RPAREN block
    (24) echo_statement -> . ECHO expression SEMICOLON
    (25) print_statement -> . PRINT expression SEMICOLON
    (19) block -> . LBLOCK statement_list RBLOCK

    RETURN          shift and go to state 15
    ID              shift and go to state 16
    VARIABLE        shift and go to state 18
    MINUS           shift and go to state 19
    INCREMENT       shift and go to state 20
    DECREMENT       shift and go to state 21
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 22
    STRING          shift and go to state 23
    BOOLEAN         shift and go to state 24
    IF              shift and go to state 25
    FOR             shift and go to state 26
    WHILE           shift and go to state 27
    FUNCTION        shift and go to state 28
    ECHO            shift and go to state 29
    PRINT           shift and go to state 30
    LBLOCK          shift and go to state 31

    statement_list                 shift and go to state 33
    statement                      shift and go to state 6
    expression                     shift and go to state 7
    if_statement                   shift and go to state 8
    for_statement                  shift and go to state 9
    while_statement                shift and go to state 10
    function_declaration           shift and go to state 11
    echo_statement                 shift and go to state 12
    print_statement                shift and go to state 13
    block                          shift and go to state 14

state 5

    (6) segment -> statement_list . PHP_CLOSE
    (7) segment -> statement_list .
    (8) statement_list -> statement_list . statement
    (10) statement -> . expression SEMICOLON
    (11) statement -> . if_statement
    (12) statement -> . for_statement
    (13) statement -> . while_statement
    (14) statement -> . function_declaration
    (15) statement -> . echo_statement
    (16) statement -> . print_statement
    (17) statement -> . block
    (18) statement -> . RETURN expression SEMICOLON
    (30) expression -> . ID LPAREN argument_list RPAREN
    (31) expression -> . VARIABLE LPAREN argument_list RPAREN
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression MODULE expression
    (40) expression -> . expression DOT expression
    (41) expression -> . expression ISEQUAL expression
    (42) expression -> . expression NOTISEQUAL expression
    (43) expression -> . expression GREATERTHAN expression
    (44) expression -> . expression LESSTHAN expression
    (45) expression -> . expression GREATERTHANEQUAL expression
    (46) expression -> . expression LESSEQUAL expression
    (47) expression -> . expression AND expression
    (48) expression -> . expression OR expression
    (49) expression -> . MINUS expression
    (50) expression -> . VARIABLE INCREMENT
    (51) expression -> . VARIABLE DECREMENT
    (52) expression -> . INCREMENT VARIABLE
    (53) expression -> . DECREMENT VARIABLE
    (54) expression -> . LPAREN expression RPAREN
    (55) expression -> . NUMBER
    (56) expression -> . VARIABLE
    (57) expression -> . STRING
    (58) expression -> . BOOLEAN
    (59) expression -> . VARIABLE EQUAL expression
    (20) if_statement -> . IF LPAREN expression RPAREN statement
    (21) if_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (22) for_statement -> . FOR LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN statement
    (23) while_statement -> . WHILE LPAREN expression RPAREN statement
    (26) function_declaration -> . FUNCTION ID LPAREN parameter_list RPAREN block
    (24) echo_statement -> . ECHO expression SEMICOLON
    (25) print_statement -> . PRINT expression SEMICOLON
    (19) block -> . LBLOCK statement_list RBLOCK

  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for INCREMENT resolved as shift
  ! shift/reduce conflict for DECREMENT resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for ECHO resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for LBLOCK resolved as shift
    PHP_CLOSE       shift and go to state 34
    PHP_OPEN        reduce using rule 7 (segment -> statement_list .)
    $end            reduce using rule 7 (segment -> statement_list .)
    RETURN          shift and go to state 15
    ID              shift and go to state 16
    VARIABLE        shift and go to state 18
    MINUS           shift and go to state 19
    INCREMENT       shift and go to state 20
    DECREMENT       shift and go to state 21
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 22
    STRING          shift and go to state 23
    BOOLEAN         shift and go to state 24
    IF              shift and go to state 25
    FOR             shift and go to state 26
    WHILE           shift and go to state 27
    FUNCTION        shift and go to state 28
    ECHO            shift and go to state 29
    PRINT           shift and go to state 30
    LBLOCK          shift and go to state 31

  ! RETURN          [ reduce using rule 7 (segment -> statement_list .) ]
  ! ID              [ reduce using rule 7 (segment -> statement_list .) ]
  ! VARIABLE        [ reduce using rule 7 (segment -> statement_list .) ]
  ! MINUS           [ reduce using rule 7 (segment -> statement_list .) ]
  ! INCREMENT       [ reduce using rule 7 (segment -> statement_list .) ]
  ! DECREMENT       [ reduce using rule 7 (segment -> statement_list .) ]
  ! LPAREN          [ reduce using rule 7 (segment -> statement_list .) ]
  ! NUMBER          [ reduce using rule 7 (segment -> statement_list .) ]
  ! STRING          [ reduce using rule 7 (segment -> statement_list .) ]
  ! BOOLEAN         [ reduce using rule 7 (segment -> statement_list .) ]
  ! IF              [ reduce using rule 7 (segment -> statement_list .) ]
  ! FOR             [ reduce using rule 7 (segment -> statement_list .) ]
  ! WHILE           [ reduce using rule 7 (segment -> statement_list .) ]
  ! FUNCTION        [ reduce using rule 7 (segment -> statement_list .) ]
  ! ECHO            [ reduce using rule 7 (segment -> statement_list .) ]
  ! PRINT           [ reduce using rule 7 (segment -> statement_list .) ]
  ! LBLOCK          [ reduce using rule 7 (segment -> statement_list .) ]

    statement                      shift and go to state 35
    expression                     shift and go to state 7
    if_statement                   shift and go to state 8
    for_statement                  shift and go to state 9
    while_statement                shift and go to state 10
    function_declaration           shift and go to state 11
    echo_statement                 shift and go to state 12
    print_statement                shift and go to state 13
    block                          shift and go to state 14

state 6

    (9) statement_list -> statement .

    PHP_CLOSE       reduce using rule 9 (statement_list -> statement .)
    RETURN          reduce using rule 9 (statement_list -> statement .)
    ID              reduce using rule 9 (statement_list -> statement .)
    VARIABLE        reduce using rule 9 (statement_list -> statement .)
    MINUS           reduce using rule 9 (statement_list -> statement .)
    INCREMENT       reduce using rule 9 (statement_list -> statement .)
    DECREMENT       reduce using rule 9 (statement_list -> statement .)
    LPAREN          reduce using rule 9 (statement_list -> statement .)
    NUMBER          reduce using rule 9 (statement_list -> statement .)
    STRING          reduce using rule 9 (statement_list -> statement .)
    BOOLEAN         reduce using rule 9 (statement_list -> statement .)
    IF              reduce using rule 9 (statement_list -> statement .)
    FOR             reduce using rule 9 (statement_list -> statement .)
    WHILE           reduce using rule 9 (statement_list -> statement .)
    FUNCTION        reduce using rule 9 (statement_list -> statement .)
    ECHO            reduce using rule 9 (statement_list -> statement .)
    PRINT           reduce using rule 9 (statement_list -> statement .)
    LBLOCK          reduce using rule 9 (statement_list -> statement .)
    PHP_OPEN        reduce using rule 9 (statement_list -> statement .)
    $end            reduce using rule 9 (statement_list -> statement .)
    RBLOCK          reduce using rule 9 (statement_list -> statement .)


state 7

    (10) statement -> expression . SEMICOLON
    (35) expression -> expression . PLUS expression
    (36) expression -> expression . MINUS expression
    (37) expression -> expression . TIMES expression
    (38) expression -> expression . DIVIDE expression
    (39) expression -> expression . MODULE expression
    (40) expression -> expression . DOT expression
    (41) expression -> expression . ISEQUAL expression
    (42) expression -> expression . NOTISEQUAL expression
    (43) expression -> expression . GREATERTHAN expression
    (44) expression -> expression . LESSTHAN expression
    (45) expression -> expression . GREATERTHANEQUAL expression
    (46) expression -> expression . LESSEQUAL expression
    (47) expression -> expression . AND expression
    (48) expression -> expression . OR expression

    SEMICOLON       shift and go to state 36
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    TIMES           shift and go to state 39
    DIVIDE          shift and go to state 40
    MODULE          shift and go to state 41
    DOT             shift and go to state 42
    ISEQUAL         shift and go to state 43
    NOTISEQUAL      shift and go to state 44
    GREATERTHAN     shift and go to state 45
    LESSTHAN        shift and go to state 46
    GREATERTHANEQUAL shift and go to state 47
    LESSEQUAL       shift and go to state 48
    AND             shift and go to state 49
    OR              shift and go to state 50


state 8

    (11) statement -> if_statement .
